# AI-Workplace-Failure-Simulator

./: Dockerfile  README.md  TASK.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  rules.md  server_pro.py  server_simple.py  server_ultra.py  start.py
env/: environment.py
server/: app.py  run_all.py
tasks/: graders.py
ui/: app.py
